--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.5",
     "install": "^0.10.1",
     "koa": "^2.3.0",
     "nodemon": "^1.11.0",
     "npm": "^5.3.0",
     "prop-types": "^15.5.10",
     "redux": "^3.7.2",
+    "style-loader": "^0.18.2",
     "webpack": "^3.5.5"
   },
   "dependencies": {
     "react": "^15.6.1",
+    "react-contenteditable": "^2.0.4",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6"
   }
